--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Akshith Anand | Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+</head>
+<body>
+
+    <!-- Navbar -->
+    <header>
+        <nav>
+            <h1>Akshith Anand</h1>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <button id="theme-toggle"><i class="fas fa-moon"></i></button>
+        </nav>
+    </header>
+
+    <!-- Home -->
+    <section id="home" class="hero fade-in">
+        <h2>Hi, I'm Akshith</h2>
+        <p>Aspiring Developer | Tech Enthusiast</p>
+        <a href="#projects" class="btn">View My Work</a>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="fade-in">
+        <h2>About Me</h2>
+        <p>I am a Computer Science student passionate about coding, problem-solving, and building projects that make an impact. I enjoy learning new technologies and working on collaborative projects.</p>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="fade-in">
+        <h2>Skills</h2>
+        <ul class="skills-list">
+            <li>Python</li>
+            <li>Java</li>
+            <li>HTML, CSS, JavaScript</li>
+            <li>Git & GitHub</li>
+        </ul>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="fade-in">
+        <h2>Projects</h2>
+        <div class="project-card">
+            <h3>Portfolio Website</h3>
+            <p>Personal website to showcase skills and projects.</p>
+            <p><strong>Tech:</strong> HTML, CSS, JavaScript</p>
+            <a href="#">Live Demo</a> | <a href="#">GitHub</a>
+        </div>
+        <div class="project-card">
+            <h3>Todo App</h3>
+            <p>A simple web-based todo list with local storage.</p>
+            <p><strong>Tech:</strong> JavaScript, HTML, CSS</p>
+            <a href="#">Live Demo</a> | <a href="#">GitHub</a>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="fade-in">
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>GitHub: <a href="#">github.com/yourusername</a></p>
+        <p>LinkedIn: <a href="#">linkedin.com/in/yourusername</a></p>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2025 Akshith Anand | Built with ❤️</p>
+    </footer>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
