--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <a href="#">Live Demo</a> | <a href="#">GitHub</a>
         </div>
         <div class="project-card">
-            <h3>Todo App</h3>
+            <h3></h3>
             <p>A simple web-based todo list with local storage.</p>
             <p><strong>Tech:</strong> JavaScript, HTML, CSS</p>
             <a href="#">Live Demo</a> | <a href="#">GitHub</a>
@@ -68,14 +68,14 @@
     <!-- Contact -->
     <section id="contact" class="fade-in">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+        <p>Email: <a href="mailto:youremail@example.com">akshithclg@gmail.com</a></p>
         <p>GitHub: <a href="#">github.com/yourusername</a></p>
-        <p>LinkedIn: <a href="#">linkedin.com/in/yourusername</a></p>
+        <p>LinkedIn: <a href="#">https://www.linkedin.com/in/akshith-anand-5a5988379?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTjaBkDnoR4G%2BBSYX9vqm4g%3D%3D</a></p>
     </section>
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Akshith Anand | Built with ❤️</p>
+        <p>&copy; 2025 Akshith Anand</p>
     </footer>
 
     <script src="script.js"></script>
