--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:youremail@example.com">akshithclg@gmail.com</a></p>
         <p>GitHub: <a href="#">github.com/yourusername</a></p>
-        <p>LinkedIn: <a href="#">https://www.linkedin.com/in/akshith-anand-5a5988379?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BTjaBkDnoR4G%2BBSYX9vqm4g%3D%3D</a></p>
+        <p>LinkedIn: <a href="#">linkedin.com/in/akshith-anand-5a5988379</a></p>
     </section>
 
     <!-- Footer -->
