--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <section id="contact" class="fade-in">
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:youremail@example.com">akshithclg@gmail.com</a></p>
-        <p>GitHub: <a href="#">https://github.com/Akshith985</a></p>
+        <p>GitHub: <a href="#">github.com/Akshith985</a></p>
         <p>LinkedIn: <a href="#">linkedin.com/in/akshith-anand-5a5988379</a></p>
     </section>
 
