--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
         </div>
         <div class="project-card">
             <h3></h3>
-            <p>A simple web-based todo list with local storage.</p>
+            <p>Hyperlocal Marketplace and Delivery Aggregator app</p>
             <p><strong>Tech:</strong> JavaScript, HTML, CSS</p>
-            <a href="#">Live Demo</a> | <a href="#">GitHub</a>
         </div>
     </section>
 
