--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <!-- Contact -->
     <section id="contact" class="fade-in">
         <h2>Contact Me</h2>
-        <p>Email: <a href="mailto:youremail@example.com">akshithclg@gmail.com</a></p>
-        <p>GitHub: <a href="#">github.com/Akshith985</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/akshith-anand-5a5988379/" target="_blank">linkedin.com/in/akshith-anand-5a5988379/</a></p>
+        <p>Email: <a href="mailto:akshithclg@gmail.com">Click Here</a></p>
+        <p>GitHub: <a href="https://github.com/Akshith985">Click Here</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/akshith-anand-5a5988379/" target="_blank">Click Here</a></p>
 
     </section>
 
